# untitled-game

./: .cursorrules  .env  .env.production  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  SHADER.md  SPEC.md  biome.json  bunfig.toml  crash.txt  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
crates/voidborne-ecs/: Cargo.toml
crates/voidborne-ecs/src/: lib.rs  schedule.rs
crates/voidborne-math/: Cargo.toml
crates/voidborne-math/src/: aabb.rs  coord.rs  lib.rs  pack.rs
crates/voidborne-registry/: Cargo.toml
crates/voidborne-registry/src/: lib.rs
crates/voidborne-render/: Cargo.toml
crates/voidborne-render/shaders/: deferred_lighting.wgsl  gbuffer_terrain.wgsl  motion_blur.wgsl  overlay.wgsl  shadow_depth.wgsl  sky_equirect.wgsl  tonemap.wgsl
crates/voidborne-render/src/: context.rs  frame_data.rs  graph.rs  lib.rs  mesh.rs  renderer.rs  texture_pool.rs
crates/voidborne-render/src/passes/: gbuffer.rs  lighting.rs  mod.rs  motion_blur.rs  overlay.rs  post.rs  shadow.rs  sky.rs
crates/voidborne-util/: Cargo.toml
crates/voidborne-util/src/: ident.rs  intern.rs  lib.rs  log.rs
crates/voidborne-world/: Cargo.toml
crates/voidborne-world/src/: block.rs  column.rs  lib.rs  light.rs  mesh.rs  section.rs  world.rs  worldgen.rs
docs/: index.md  quality-score.md
docs/design-docs/: core-beliefs.md  decision-log.md  index.md
docs/exec-plans/: index.md  issue-tracker.md  task-tracker.md  tech-debt-tracker.md
docs/exec-plans/active/: 2026-04-21-binary-save-format.md  EXEC-PLAN-TEMPLATE.md  README.md
docs/exec-plans/completed/: 2026-04-20-harness-doc-system.md  README.md
docs/references/: auto-correct-loop.md  context-refresh-log.md  doc-gardening-checklist.md  harness-engineering-notes.md  index.md
game/: Cargo.toml
game/src/: app.rs  main.rs
game/src/engine/: camera.rs  input.rs  mod.rs  physics.rs  raycaster.rs
game/src/renderer/: gpu.rs  mod.rs  render_loop.rs  types.rs
game/src/session/: codec.rs  mod.rs  types.rs
game/src/shaders/: crosshair.wgsl  lut_blit.wgsl  outline.wgsl  sky_equirect.wgsl  voxel_forward.wgsl
game/src/world/: block.rs  chunk.rs  light.rs  mod.rs
scripts/: gen-base-textures.ts
src/: atlas.ts  camera.ts  canvas.ts  clouds.ts  debug.ts  debug.tsx  drop-overlay.tsx  frustum.ts  input-backend.ts  input.ts  main.ts  messages.ts  native-input.ts  pause-menu.ts  pause-menu.tsx  physics.ts  raycaster.ts  renderer-interface.ts  renderer-utils.ts  renderer.ts  resource-pack.ts  settings.ts  shader-materials.ts  skybox.ts  style.css  time-manager.ts  title-screen.tsx  vite-env.d.ts  web-input.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: session-orchestrator.ts
src/engine/input/: input-backend.ts  input.ts  native-input.ts  web-input.ts
src/engine/physics/: physics.ts  raycaster.ts
src/engine/rendering/: atlas.ts  camera.ts  clouds.ts  renderer-interface.ts  renderer-utils.ts  renderer.ts  shader-materials.ts  skybox.ts
src/engine/shaderpack/: library.ts  loader-tauri.ts  loader.ts  parse-block-properties.ts  parse-drawbuffers.ts  parse-properties.ts  preprocess.ts  registry.ts  runtime.ts  types.ts  uniform-bridge.ts  zip.ts
src/engine/vfs/: index.ts  tauri-vfs.ts  types.ts  web-vfs.ts
src/engine/webgpu/: renderer.ts
src/environment/resource/: resource-pack.ts
src/environment/time/: time-manager.ts
src/environment/world/: block.ts  chunk.ts  light-engine.ts  world.ts
src/game/: in-memory-save-store.ts  session-codec.ts  session-types.ts
src/logic/session/: in-memory-save-store.ts  orchestrator.ts  session-codec.ts  session-types.ts
src/logic/settings/: settings.ts
src/shaderpack/: compile.ts  library.ts  loader-tauri.ts  loader-web.ts  loader.ts  naga.ts  parse-block-properties.ts  parse-colortex-format.ts  parse-drawbuffers.ts  parse-properties.ts  preprocess.ts  registry.ts  runtime.ts  types.ts  uniform-bridge.ts  zip.ts
src/ui/: chat-box.tsx  debug.tsx  drop-overlay.tsx  pause-menu.tsx  title-screen.tsx
src/vfs/: index.ts  tauri-vfs.ts  types.ts  web-vfs.ts
src/webgpu/: renderer.ts
src/world/: block.ts  chunk.ts  light-engine.ts  world.ts
tests/game/: in-memory-save-store.test.ts  session-codec.test.ts
tests/shaderpack/: clouds.test.ts  loader.test.ts  parse-block-properties.test.ts  parse-drawbuffers.test.ts  parse-properties.test.ts  preprocess.test.ts  skybox.test.ts
tests/world/: world-snapshot.test.ts
(+15 files in other folders)
