[workspace]
members = [
    "game",
    "crates/voidborne-math",
    "crates/voidborne-util",
    "crates/voidborne-registry",
    "crates/voidborne-ecs",
    "crates/voidborne-world",
    "crates/voidborne-render",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
# Shared pinned versions. Crates opt in via `.workspace = true`.
glam = { version = "0.29", features = ["bytemuck", "serde"] }
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ahash = "0.8"
smallvec = { version = "1", features = ["serde", "union"] }
parking_lot = "0.12"
wgpu = { version = "24", features = ["wgsl"] }
winit = "0.30"
pollster = "0.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
