[package]
name = "voidborne"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voidborne"
path = "src/main.rs"

[dependencies]
winit = "0.30"
wgpu = { version = "24", features = ["wgsl"] }
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
pollster = "0.4"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
