[package]
name = "voidborne-math"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
glam = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "glam/serde"]
