[package]
name = "voidborne-render"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
voidborne-math = { path = "../voidborne-math" }
voidborne-world = { path = "../voidborne-world" }
glam = { workspace = true }
bytemuck = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
smallvec = { workspace = true }
