[package]
name = "voidborne-util"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
ahash = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
